@@ -64,9 +64,11 @@ The verbose mode gives the current and previous versions
 >>> checker.check(level=2)
 # Checking buildout file ...
 Reading file:///.../zope.interface/
-zope.interface=3.4.1 # was: 3.4.0
+# was: 3.4.0
+zope.interface=3.4.1
 Reading file:///.../zope.component/
-zope.component=3.0.3 # was: 3.0.0
+# was: 3.0.0
+zope.component=3.0.3
 
 The old comments are removed:
 
@@ -78,7 +80,8 @@ The old comments are removed:
 ... index = %s
 ... versions = versions
 ... [versions]
-... zope.interface = 3.4.1 # was: 3.4.0
+... # was: 3.4.0
+... zope.interface = 3.4.1
 ... zope.component = 3.0.3
 ... """ % testindex)
 >>> buildout_file.close()
@@ -87,9 +90,11 @@ The old comments are removed:
 >>> checker.check()
 # Checking buildout file ...
 Reading file:///.../zope.interface/
-zope.interface=3.6.1 # was: 3.4.1
+# was: 3.4.1
+zope.interface=3.6.1
 Reading file:///.../zope.component/
-zope.component=3.9.4 # was: 3.0.3
+# was: 3.0.3
+zope.component=3.9.4
 
 We can provide a blacklist file, containing versions to not suggest.
 This file may come from a buildbot remembering failures.
@@ -107,9 +112,11 @@ This file may come from a buildbot remembering failures.
 >>> checker.check()
 # Checking buildout file ...
 Reading file:///.../zope.interface/
-zope.interface=3.6.1 # was: 3.4.1
+# was: 3.4.1
+zope.interface=3.6.1
 Reading file:///.../zope.component/
-zope.component=3.9.2 # was: 3.0.3
+# was: 3.0.3
+zope.component=3.9.2
 
 We can let the checker to suggest only one new package. This should be used to
 test a just single new package against a set of other packages.
@@ -121,7 +128,8 @@ test a just single new package against a set of other packages.
 >>> checker.check()
 # Checking buildout file ...
 Reading file:///.../zope.interface/
-zope.interface=3.6.1 # was: 3.4.1
+# was: 3.4.1
+zope.interface=3.6.1
 zope.component=3.0.3
 
 >>> os.remove(blacklist_path)
